<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmailSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/ed_background"
        android:ems="10"
        android:fontFamily="@font/roboto_serif_light"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ed_background"
        android:ems="10"
        android:fontFamily="@font/roboto_serif_light"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edEmailSignUp"
        app:layout_constraintStart_toStartOf="@+id/edEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignUp" />

    <EditText
        android:id="@+id/edConfirmPasswordSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ed_background"
        android:ems="10"
        android:fontFamily="@font/roboto_serif_light"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/edPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSignUp" />

    <TextView
        android:id="@+id/txtSignUpTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/txt_background_hollow"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/edConfirmPasswordSignUp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/edConfirmPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/cbShowPasswordSignUp" />

    <CheckBox
        android:id="@+id/cbShowPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:buttonTint="@color/blue"
        android:fontFamily="@font/roboto_serif_light"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/edConfirmPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPasswordSignUp" />

    <TextView
        android:id="@+id/txtSignInTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/txt_background_filled"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/txtSignUpTwo"
        app:layout_constraintStart_toStartOf="@+id/txtSignUpTwo"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUpTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>