<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">


    <EditText
        android:id="@+id/edEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/ed_background"
        android:ems="10"
        android:fontFamily="@font/roboto_serif_light"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPasswordSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ed_background"
        android:ems="10"
        android:fontFamily="@font/roboto_serif_light"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edEmailSignIn"
        app:layout_constraintStart_toStartOf="@+id/edEmailSignIn"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignIn" />

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/txt_background_filled"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordSignIn"
        app:layout_constraintStart_toStartOf="@+id/edPasswordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/cbShowPasswordSignIn" />

    <CheckBox
        android:id="@+id/cbShowPasswordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:buttonTint="@color/blue"
        android:fontFamily="@font/roboto_serif_light"
        android:text="@string/show_password"
        app:layout_constraintStart_toStartOf="@+id/edPasswordSignIn"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSignIn" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/txt_background_hollow"
        android:fontFamily="@font/roboto_serif_black"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/txtSignIn"
        app:layout_constraintStart_toStartOf="@+id/txtSignIn"
        app:layout_constraintTop_toBottomOf="@+id/txtSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>